--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -4,6 +4,11 @@
 //:FeatureName: OpenShift Pipelines
 //include::modules/technology-preview.adoc[leveloffset=+1]
 
+[WARNING]
+====
+Documentation deprecation notice: Please visit the link:https://docs.openshift.com/container-platform/latest/pipelines/understanding-openshift-pipelines.html[OpenShift Pipelines documentation website] for the latest documentation.
+====
+
 OpenShift Pipelines is a cloud-native, continuous integration and continuous delivery (CI/CD) solution based on Kubernetes resources. It uses link:https://tekton.dev[Tekton] building blocks to automate deployments across multiple platforms by abstracting away the underlying implementation details. Tekton introduces a number of standard link:https://kubernetes.io/docs/concepts/extend-kubernetes/api-extension/custom-resources/[Custom Resource Definitions (CRDs)] for defining pipelines that are portable across Kubernetes distributions.
 
 == Key features
